# fm-robot

./: CLAUDE.md  Dockerfile  README.md  fm-robot.repos  install.sh  run.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/diagrams/: README.md  control.d2  controllers.d2  hardware.d2  packages.d2  registry.d2  robot_state_publisher.d2  view_robot.d2  xacro.d2
fm_control/: CMakeLists.txt  README.md  fm_control_mujoco_plugins.xml  package.xml
fm_control/include/fm_control/: so101_task_env_markers.hpp  so101_task_env_plugin.hpp
fm_control/src/: pose_tracking_node.cpp  so101_task_env_plugin.cpp
fm_control/test/: test_so101_task_env_markers.cpp
fm_control/urdf/: axol.ros2_control.xacro  axol.sim.urdf.xacro  g1.ros2_control.xacro  openarm.ros2_control.xacro  openarm.sim.urdf.xacro  so101.ros2_control.xacro
fm_description/: CMakeLists.txt  README.md  package.xml
fm_description/config/: home_poses.yaml
fm_description/foxglove/: axol_view.json  g1_29dof_view.json  g1_d_view.json  openarm_view.json  so101_view.json
fm_description/launch/: view_robot.launch.py
fm_description/rviz/: axol.rviz  g1_29dof.rviz  g1_d.rviz  openarm.rviz  so101.rviz
fm_description/scripts/: convert_openarm_visual_meshes.py
fm_description/test/: test_convert_openarm_visual_meshes.py  test_descriptions.py  test_home_poses.py  test_joint_publisher.py
fm_sensors/: README.md  package.xml  setup.py
fm_sensors/fm_sensors/: camera_node.py
