<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fm_description</name>
  <version>0.0.0</version>
  <description>First Motive robot description: URDF, xacro, meshes</description>
  <maintainer email="nish@ubundi.co.za">First Motive</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- OpenArm visual .dae -> .stl conversion (see CMakeLists) needs python trimesh
       + pycollada. They have no rosdep rule (not in apt/rosdistro), so the base
       image installs them via pip; the build guards on import and skips conversion
       with a warning if absent, matching how assimp was provided image-only. -->

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>openarm_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
